--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Nyamper.github.io/blog",
+  "homepage": "http://nyamper.github.io/blog",
   "name": "blog",
   "version": "0.1.0",
   "private": true,
