--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1",
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.1.6",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
