--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "redux-saga": "^1.1.3",
     "reselect": "^4.1.6",
     "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "predeploy": "npm run build",
